better, clearer loggers general sql cleanup